--- a/src/AppBundle/Config/ColumnFamilyCompactionSubOptions.yml
+++ b/src/AppBundle/Config/ColumnFamilyCompactionSubOptions.yml
@@ -8,9 +8,6 @@ SizeTieredCompactionStrategy:
     bucket_low:
         type: float
         default: 0.5
-    cold_reads_to_omit:
-        type: float
-        default: 0.05
     unchecked_tombstone_compaction:
         type: bool
         default: false
@@ -21,9 +18,6 @@ SizeTieredCompactionStrategy:
     tombstone_threshold:
         type: float
         default: 0.2
-    only_purge_repaired_tombstones:
-        type: bool
-        default: false
     min_threshold:
         type: int
         default: 4
@@ -46,8 +40,8 @@ DateTieredCompactionStrategy:
         type: int
         default: 864000
     max_sstable_age_days:
-        type: bool
-        default: true
+        type: int
+        default: 1000
     timestamp_resolution:
         type: enum
         default: 'MICROSECONDS'
